--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 				<p>技术方向</p>
 				<p class="fragment">1.开发技术:分布式的微服务架构，跨服务跨平台的数据交互，多端同步，多语言的开发</p>
-				<p class="fragment">2.部署技术:基于web的自动化部署  负载均衡 多地容灾  静态资源独立CDN</p>
+				<p class="fragment">2.部署技术:基于web的自动化部署  负载均衡 多地容灾</p>
 				<p class="fragment">3.架构演化:基于微服务的水平扩张和基于ECS的弹性扩容</p>
 				<p class="fragment">4.开发模式:实现敏捷开发 一方面基础平台功能的积累比如元数据等，另一方面从前端到后台的成熟健壮的模版化
 				</p>
