--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="css/theme/black.css" id="theme">
+	<link rel="stylesheet" href="css/css.css">
 
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -40,12 +41,10 @@
 
 	<!-- Any section element inside of this container is displayed as a slide -->
 	<div class="slides">
-		<section>
+		<section  class="section1">
 			<h1>述职报告</h1>
 			<h3></h3>
-			<p>
-				<small>Created by 万能小哥技术部中心冲王鹏</small>
-			</p>
+			<p>Created by 万能小哥技术部中心冲王鹏</p>
 		</section>
 
 		<section>
@@ -57,34 +56,34 @@
 
 		<!-- Example of nested vertical slides -->
 		<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
-			<section>
+			<section class="section2">
 				<h2>形而下</h2>
 
-				<p>1.钉钉ISV</p>
-				<p class="fragment">2.万能小哥2.0</p>
-				<p class="fragment">分布式产品体系</p>
-				<p class="fragment">静态资源服务器</p>
-				<p class="fragment">支付等微服务</p>
-				<p class="fragment">标准化的第三方订单对接</p>
-				<p class="fragment">3.线上运维部署准备</p>
+				<p>1、钉钉ISV</p>
+				<p class="fragment">2、万能小哥2.0</p>
+				<span class="fragment">分布式产品体系</span>
+				<span class="fragment">静态资源服务器</span>
+				<span class="fragment">支付等微服务</span>
+				<span class="fragment">标准化的第三方订单对接</span>
+				<p class="fragment">3、线上运维部署准备</p>
 				<br>
 
 			</section>
-			<section>
+			<section class="section3">
 				<h2>项目钉钉ISV——万能小哥钉钉企服</h2>
 				<p>8月初——9月中旬</p>
 				<p>由于钉钉ISV开发的独立性，以及未来对整个万能小哥互联网产品体系的规划，尝试将原先的集中式系统转化为分布式，引入了微服务的开发模式，服务运行在独立进程中，通过一些轻量级交互机制来通信。在9月中旬完成了产品提交。</p>
 			</section>
 
 
-			<section>
+			<section  class="section3">
 				<h2>万能小哥2.0</h2>
 				<p>9月中旬——12月底</p>
 
 				<p>按照我们制定的分布式体系开发，从终端应用层 到 服务层到 数据源。在了解公司技术积累和现阶段的需求之后，对一些功能进行变更，比如采用OSS进行静态资源存储和CDN分发等，对一些服务进行了微服务的封装，比如第三方订单，支付，保险，SMS，定时任务等。12月底完成对各个终端app以及各个应用的功能支持</p>
 				<br>
 			</section>
-			<section>
+			<section class="section4">
 				<h2>分布式产品体系</h2>
 				<p>
 					<a href="#" class="navigate-down">
@@ -93,7 +92,7 @@
 				</p>
 			</section>
 
-			<section>
+			<section class="section4">
 				<h2>标准化的第三方订单对接</h2>
 				<p>
 					<a href="#" class="navigate-down">
@@ -102,7 +101,7 @@
 				</p>
 			</section>
 
-			<section>
+			<section class="section4">
 				<h2>上线前准备以及运维部署</h2>
 				<p>1月初——1月底</p>
 				<p>
@@ -111,11 +110,11 @@
 			</section>
 		</section>
 		<section data-transition="slide" data-background="#4d7e65" data-background-transition="zoom">
-			<section>
+			<section class="section5">
 				<h2>新年伊始</h2>
 			</section>
 
-			<section>
+			<section  class="section5">
 
 				<p>
 					产品方向，我们将开发数据平台，分析系统以及定制化优惠活动和定制化产品。
@@ -124,14 +123,14 @@
 			</section>
 
 
-			<section>
+			<section  class="section6">
 
 				<p>技术方向</p>
-				<p class="fragment">1.开发技术:分布式的微服务架构，跨服务跨平台的数据交互，多端同步，多语言的开发</p>
-				<p class="fragment">2.部署技术:基于web的自动化部署  负载均衡 多地容灾</p>
-				<p class="fragment">3.架构演化:基于微服务的水平扩张和基于ECS的弹性扩容</p>
-				<p class="fragment">4.开发模式:实现敏捷开发 一方面基础平台功能的积累比如元数据等，另一方面从前端到后台的成熟健壮的模版化
-				</p>
+				<span class="fragment">1.开发技术:分布式的微服务架构，跨服务跨平台的数据交互，多端同步，多语言的开发</span>
+				<span class="fragment">2.部署技术:基于web的自动化部署  负载均衡 多地容灾</span>
+				<span class="fragment">3.架构演化:基于微服务的水平扩张和基于ECS的弹性扩容</span>
+				<span class="fragment">4.开发模式:实现敏捷开发 一方面基础平台功能的积累比如元数据等，另一方面从前端到后台的成熟健壮的模版化
+				</span>
 			</section>
 		</section>
 
@@ -139,8 +138,8 @@
 
 		<section style="text-align: left;">
 			<h1>THE END</h1>
-			<p>
-				3Q
+			<p style="font-size: 1em;">
+				Thank You !
 			</p>
 		</section>
 
